[project]
name = "empathy-mer-prototype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cv2-enumerate-cameras>=1.3.0",
    "deepface>=0.0.95",
    "librosa>=0.11.0",
    "opencv-python>=4.11.0.86",
    "tabulate>=0.9.0",
    "tf-keras>=2.20.1",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]
